UI position changed, some other progress

--- a/WebUI/index.html
+++ b/WebUI/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div id="page">
 			<div id="orangeRect">
-				<label>FairRoundStart</label>
+				<label>FAIR ROUND START</label>
 			</div>
 			<ul id="playerList">
 			</ul>
